# nekos_arm

./: .gdbinit  .gitignore  .gitmodules  Cargo.toml  Makefile  aarch64-qemu.ld  aarch64-unknown-none-softfloat.json  aarch64-unknown-none.json  build.rs  build.sh  debug.gdb  pinephone.uimg  rust-toolchain.toml  source.sh
.cargo/: config.toml
src/: cpu.rs  crazy.rs  exception.rs  exception.s  heap.rs  main.old.rs  main.rs  serial.rs  singleton.rs  start.s  sync.rs  thread.rs  utils.rs
src/allocator/: mod.rs
src/arch/aarch64/: aarch64-unknown-none-softfloat.json  aarch64.ld  boot.rs  boot.s  exception.rs  exception.s  fdt.rs  mod.rs  routine.s  thread.rs
src/bsp/: mod.rs
src/bsp/pinephone/: mod.rs
src/bsp/qemu/: mod.rs
